// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"opencode mcp

manage MCP (Model Context Protocol) servers

命令：
  opencode mcp add [name]     add an MCP server
  opencode mcp list           list MCP servers and their status                        [aliases: ls]
  opencode mcp auth [name]    authenticate with an OAuth-enabled MCP server
  opencode mcp logout [name]  remove OAuth credentials for an MCP server
  opencode mcp debug <name>   debug OAuth connection for an MCP server

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"opencode attach <url>

attach to a running opencode server

位置：
  url  http://localhost:4096                                                         [字符串] [必需]

选项：
  -h, --help          show help                                                               [布尔]
  -v, --version       show version number                                                     [布尔]
      --print-logs    print logs to stderr                                                    [布尔]
      --log-level     log level                  [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                            [布尔]
      --dir           directory to run in                                                   [字符串]
  -c, --continue      continue the last session                                               [布尔]
  -s, --session       session id to continue                                                [字符串]
      --fork          fork the session when continuing (use with --continue or --session)     [布尔]
  -p, --password      basic auth password (defaults to OPENCODE_SERVER_PASSWORD)            [字符串]
  -u, --username      basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [字符串]
      --mini          start the minimal interactive interface                 [布尔] [默认值: false]
      --no-replay     disable mini session history replay on resume and after resize          [布尔]
      --replay-limit  cap visible mini replay to the newest N messages                        [数字]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"opencode run [message..]

run opencode with a message

位置：
  message  message to send                                                       [数组] [默认值: []]

选项：
  -h, --help         show help                                                                [布尔]
  -v, --version      show version number                                                      [布尔]
      --print-logs   print logs to stderr                                                     [布尔]
      --log-level    log level                   [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                             [布尔]
      --command      the command to run, use message for args                               [字符串]
  -c, --continue     continue the last session                                                [布尔]
  -s, --session      session id to continue                                                 [字符串]
      --fork         fork the session before continuing (requires --continue or --session)    [布尔]
  -m, --model        model to use in the format of provider/model                           [字符串]
      --agent        agent to use                                                           [字符串]
      --format       format: default (formatted) or json (raw JSON events)
                                            [字符串] [可选值: "default", "json"] [默认值: "default"]
  -f, --file         file(s) to attach to message                                             [数组]
      --title        title for the session (uses truncated prompt if no value provided)     [字符串]
      --attach       attach to a running opencode server (e.g., http://localhost:4096)      [字符串]
  -p, --password     basic auth password (defaults to OPENCODE_SERVER_PASSWORD)             [字符串]
  -u, --username     basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [字符串]
      --dir          directory to run in, path on remote server if attaching                [字符串]
      --port         port for the local server (defaults to random port if no value provided) [数字]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [字符串]
      --thinking     show thinking blocks                                                     [布尔]
  -i, --interactive  run in direct interactive split-footer mode              [布尔] [默认值: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                              [布尔] [默认值: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"opencode debug

debugging and troubleshooting tools

命令：
  opencode debug config        show resolved configuration
  opencode debug lsp           LSP debugging utilities
  opencode debug rg            ripgrep debugging utilities
  opencode debug file          file system debugging utilities
  opencode debug scrap         list all known projects
  opencode debug skill         list all available skills
  opencode debug snapshot      snapshot debugging utilities
  opencode debug startup       print startup timing
  opencode debug agent <name>  show agent configuration details
  opencode debug v2            debug v2 catalog and built-in plugins
  opencode debug info          show debug information
  opencode debug paths         show global paths (data, config, cache, state)
  opencode debug wait          wait indefinitely (for debugging)

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"opencode providers

manage AI providers and credentials

命令：
  opencode providers list               list providers and credentials                 [aliases: ls]
  opencode providers login [url]        log in to a provider
  opencode providers logout [provider]  log out from a configured provider

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"opencode agent

manage agents

命令：
  opencode agent create  create a new agent
  opencode agent list    list all available agents

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"opencode upgrade [target]

upgrade opencode to the latest or a specific version

位置：
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -m, --method      installation method to use
                           [字符串] [可选值: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"opencode uninstall

uninstall opencode and remove all related files

选项：
  -h, --help         show help                                                                [布尔]
  -v, --version      show version number                                                      [布尔]
      --print-logs   print logs to stderr                                                     [布尔]
      --log-level    log level                   [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                             [布尔]
  -c, --keep-config  keep configuration files                                 [布尔] [默认值: false]
  -d, --keep-data    keep session data and snapshots                          [布尔] [默认值: false]
      --dry-run      show what would be removed without removing              [布尔] [默认值: false]
  -f, --force        skip confirmation prompts                                [布尔] [默认值: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"opencode serve

starts a headless opencode server

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --port        port to listen on                                             [数字] [默认值: 0]
      --hostname    hostname to listen on                             [字符串] [默认值: "127.0.0.1"]
      --cors        additional domains to allow for CORS                         [数组] [默认值: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"opencode models [provider]

list all available models

位置：
  provider  provider ID to filter models by                                                 [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --verbose     use more verbose model output (includes metadata like costs)              [布尔]
      --refresh     refresh the models cache from models.dev                                  [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"⠀                                ▄     
█▀▀█ █▀▀█ █▀▀█ █▀▀▄ █▀▀▀ █▀▀█ █▀▀█ █▀▀█
█  █ █  █ █▀▀▀ █  █ █    █  █ █  █ █▀▀▀
▀▀▀▀ █▀▀▀ ▀▀▀▀ ▀  ▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀

命令：
  opencode completion          generate shell completion script
  opencode mcp                 manage MCP (Model Context Protocol) servers
  opencode [project]           start opencode tui                                           [默认值]
  opencode attach <url>        attach to a running opencode server
  opencode run [message..]     run opencode with a message
  opencode debug               debugging and troubleshooting tools
  opencode providers           manage AI providers and credentials                   [aliases: auth]
  opencode agent               manage agents
  opencode upgrade [target]    upgrade opencode to the latest or a specific version
  opencode uninstall           uninstall opencode and remove all related files
  opencode serve               starts a headless opencode server
  opencode models [provider]   list all available models
  opencode export [sessionID]  export session data as JSON
  opencode session             manage sessions
  opencode plugin <module>     install plugin and update config                      [aliases: plug]
  opencode db                  database tools

位置：
  project  path to start opencode in                                                        [字符串]

选项：
  -h, --help          show help                                                               [布尔]
  -v, --version       show version number                                                     [布尔]
      --print-logs    print logs to stderr                                                    [布尔]
      --log-level     log level                  [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                            [布尔]
      --port          port to listen on                                           [数字] [默认值: 0]
      --hostname      hostname to listen on                           [字符串] [默认值: "127.0.0.1"]
      --cors          additional domains to allow for CORS                       [数组] [默认值: []]
  -m, --model         model to use in the format of provider/model                          [字符串]
  -c, --continue      continue the last session                                               [布尔]
  -s, --session       session id to continue                                                [字符串]
      --fork          fork the session when continuing (use with --continue or --session)     [布尔]
      --prompt        prompt to use                                                         [字符串]
      --agent         agent to use                                                          [字符串]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                              [布尔] [默认值: false]
      --mini          start the minimal interactive interface                 [布尔] [默认值: false]
      --no-replay     disable mini session history replay on resume and after resize          [布尔]
      --replay-limit  cap visible mini replay to the newest N messages                        [数字]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"opencode export [sessionID]

export session data as JSON

位置：
  sessionID  session id to export                                                           [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --sanitize    redact sensitive transcript and file data                                 [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"opencode session

manage sessions

命令：
  opencode session list                list sessions
  opencode session delete <sessionID>  delete a session

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"opencode plugin <module>

install plugin and update config

位置：
  module  npm module name                                                            [字符串] [必需]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -g, --global      install in global config                                  [布尔] [默认值: false]
  -f, --force       replace existing plugin version                           [布尔] [默认值: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"opencode db

database tools

命令：
  opencode db [query]     open an interactive sqlite3 shell or run a query                  [默认值]
  opencode db path        print the database path

位置：
  query  SQL query to execute                                                               [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --format      Output format                   [字符串] [可选值: "json", "tsv"] [默认值: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"opencode mcp list

list MCP servers and their status

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"opencode mcp add [name]

add an MCP server

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
      --url         URL for a remote MCP server                                             [字符串]
      --env         environment variable for a local MCP server (KEY=VALUE)                   [数组]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                           [数组]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"opencode mcp auth [name]

authenticate with an OAuth-enabled MCP server

命令：
  opencode mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"opencode mcp logout [name]

remove OAuth credentials for an MCP server

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"opencode providers list

list providers and credentials

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"opencode providers login [url]

log in to a provider

位置：
  url  opencode auth provider                                                               [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -p, --provider    provider id or name to log in to (skips provider selection)             [字符串]
  -m, --method      login method label (skips method selection)                             [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"opencode providers logout [provider]

log out from a configured provider

位置：
  provider  provider id or name to log out from                                             [字符串]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"opencode agent create

create a new agent

选项：
  -h, --help                  show help                                                       [布尔]
  -v, --version               show version number                                             [布尔]
      --print-logs            print logs to stderr                                            [布尔]
      --log-level             log level          [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                    [布尔]
      --path                  directory path to generate the agent file                     [字符串]
      --description           what the agent should do                                      [字符串]
      --mode                  agent mode             [字符串] [可选值: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [字符串]
  -m, --model                 model to use in the format of provider/model                  [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"opencode agent list

list all available agents

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"opencode session list

list sessions

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]
  -n, --max-count   limit to N most recent sessions                                           [数字]
      --format      output format               [字符串] [可选值: "table", "json"] [默认值: "table"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"opencode session delete <sessionID>

delete a session

位置：
  sessionID  session ID to delete                                                    [字符串] [必需]

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"opencode db path

print the database path

选项：
  -h, --help        show help                                                                 [布尔]
  -v, --version     show version number                                                       [布尔]
      --print-logs  print logs to stderr                                                      [布尔]
      --log-level   log level                    [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                              [布尔]"
`;
